# license-plate-recognition

./: .gitignore  README.md  inference_ap2.py  inference_approach2.py  pyproject.toml
results/: example_license_plates_frequency_run.json  example_recognized_license_plates_run.json
src/: cli.py  configs.py  inference_approach1.py  inference_approach2.py
src/inference/: base_inference.py  inference_approach1.py  inference_approach2.py
src/utils/: utils.py
